sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: not found: value car
  car i = 0
  ^AlgCombSort:11: error: not found: value i
    i = 0
    ^AlgCombSort:12: error: not found: value i
    while (i + ecart < getNombreValeurs()) {
           ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart,i)) {
                    ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart,i)) {
                            ^AlgCombSort:14: error: not found: value i
        echange(i+ecart,i)
                ^AlgCombSort:14: error: not found: value i
        echange(i+ecart,i)
                        ^AlgCombSort:16: error: not found: value i
      i += 1
      ^