sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  var cpt = 0
  car i = 0
  while (ecart > 1 || cpt >0) {
    cpt = 0
    if (ecart > 1) {
      ecart = (ecart.toDouble / 1.3).toInt      
    }
    i = 0
    while (i + ecart < getNombreValeurs()) {
      if (plusPetit(i+ecart,i)) {
        echange(i+ecart,i)
      }
      i += 1
    }
  }
}